[package]
name = "gcs-proxy-deps"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
anyhow = "1.0.65"
futures = "0.3.27"
getset = "0.1.2"
tracing = "0.1.37"
tokio = {version = "1.26.0", default-features = false}
humantime-serde = "1.1.1"
cloud-storage = { git = "https://github.com/guaychou/cloud-storage-rs"}
base64 = "0.21"