[package]
name = "gcs-proxy-extras"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "1.25.0" , features = ["rt-multi-thread"]}
tracing = "0.1.37"
num_cpus = "1.13.1"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16" , features = ["env-filter", "time", "fmt" , "std", "local-time"] } 
figlet-rs = "0.1.4"
tracing-appender = "0.2"
time = { version = "0.3.20", features = ["macros"] }
tracing-bunyan-formatter = "0.3.4"
actix-web = "4.3"