[package]
name = "gcs-proxy-server"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
actix-web = {version = "4", default-features = false, features = ["macros"]}
serde = "1.0"
anyhow = "1.0.65"
gcs-proxy-deps = { path = "../gcs-proxy-deps" }
gcs-proxy-extras = { path = "../gcs-proxy-extras" }
getset = "0.1.2"
thiserror = "1.0.40"
serde_json = "1"
tracing-actix-web = "0.7"
actix-web-httpauth = "0.8"